--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,27 @@ group 'commonJava'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+ext {
+    springVersion = "5.1.5.RELEASE"
+    jacksonVersion = "2.9.9"
+    testNgVersion = "6.14.3"
+}
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "org.springframework:spring-core:$springVersion"
+    compile "org.springframework:spring-context:$springVersion"
+    compile "org.springframework:spring-test:$springVersion"
+    testImplementation "org.testng:testng:$testNgVersion"
+}
+
+test {
+    useTestNG()
 }
